<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="facebook_app_id">774248859306804</string>
    <string name="app_name">PlayerX</string>
    <string name="EXTRA_PREFIX">com.example.sportsapp.</string>
    
    <!-- Page Titles -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_profile">Display Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    
    <string name="title_activity_list_events">Events</string>
    <string name="title_activity_view_event">View Event</string>
    <string name="title_activity_create_event">New Event</string>
    
    <string name="title_activity_list_groups">Groups</string>
    <string name="title_activity_view_group">View Group</string>
    <string name="title_activity_create_group">New Group</string>
    
    
    <!--  Home page...  -->
    <string name="view_profile">Profile</string>
    <string name="view_events">Events</string>
    <string name="view_groups">Groups</string>
    <string name="view_invitations">Invitations</string>
    <string name="view_friends">Friends</string>
    
    
    
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    
    
    <string name="hello_world">Hello world!</string>
    <string name="login_message">Please enter your login details</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="signin">Sign in</string>
    <string name="action_search">Search</string>
    <string name="button_login">Login</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
	<string name="save_location">Save Location</string>
    <string name="cancel">Cancel</string>
    
    <string name="button_create_event">New Event</string>
    <string name="button_view_event">View Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="button_view_attendees">View Attendees</string>
    <string name="button_invite_users">Invite Users</string>
    
    <string name="button_create_group">New Group</string>
    <string name="button_view_group">View Group</string>
    <string name="button_edit_group">Edit Group</string>
    <string name="button_view_members">View Members</string>
    
    <string name="button_add_a_friend">Add a Friend</string>
    

    <string name="button_other_friends">Other Friends</string>
    
    <string name="profile_picture">Profile Picture</string>
    
    <string name="title_activity_listfriendsactivity">Friends</string>
    
    <!-- Map String -->
    <string name="button_show_map">Show Map</string>
    <string name="title_activity_show_map">Show Map</string>
    
    
    <string name="title_activity_addafriendactivity">Add A Friend</string>
    
    
    <string-array name="events_type">
        <item>Attending</item>
        <item>Invited</item>
        <item>Declined</item> <!-- Should be Hosting but functionality not there -->
    </string-array>
    
    <string-array name="event_locations">
        <item>UCD Bowl</item>
        <item>UCD Sports Hall B</item>
        <item>UCD Swimming Pool</item>
        <item>Herbert Park</item>
        <item>Rosses Point Golf Club (Sligo)</item>
    </string-array>
    
    <string-array name="sport_names">
        <item>American Football</item>
        <item>Athletics</item>
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Cricket</item>
        <item>Cycling</item>
        <item>Darts</item>
        <item>Gaelic Football</item>
        <item>Golf</item>
        <item>Handball</item>
        <item>Hockey</item>
        <item>Hurling</item>
        <item>Ice Hockey</item>
        <item>Rugby</item>
        <item>Sailing</item>
        <item>Snooker</item>
        <item>Soccer</item>
        <item>Squash</item>
        <item>Surfing</item>
        <item>Swimming</item>
        <item>Tennis</item>
        <item>Ultimate Frisbee</item>
        <item>Volleyball</item>
	</string-array>
</resources>
