<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sportsapp.MainActivity"
	android:orientation="vertical" >
    
    
     <TextView android:id="@+id/userID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
     
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="setUserID"
         android:text="Set user ID" />
     
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="viewProfile"
         android:text="@string/view_profile" />
     
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="viewEvents"
         android:text="@string/view_events" />
     
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="viewGroups"
         android:text="@string/view_groups" />
     
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick=""
         android:text="@string/view_invitations" />
     
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="viewFriends"
         android:text="@string/view_friends" />
		 
	<com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />
     
     <TextView
	    android:id="@+id/userInfoTextView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginLeft="20dp"
	    android:layout_marginTop="20dp"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:visibility="invisible"
	/>


    
</LinearLayout>

