<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sportsapp.EditProfileActivity" 
    android:orientation="vertical" >

    <TextView
        android:id="@+id/userID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    
    <EditText android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hello_world" />
    
    <EditText android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hello_world" />
    
    <EditText android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hello_world" />

   <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="saveProfile"
         android:text="@string/save_profile" />
   
   <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="cancelEdit"
         android:text="@string/cancel" />

</LinearLayout>
