<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sportsapp.ViewGroupActivity" 
    android:orientation="vertical" >

	<TextView android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Group Name" />
	
	
	
	 <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="viewMembers"
         android:text="@string/button_view_members" />
	 
	 <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="invite_users"
         android:text="@string/button_invite_users" />
	 
	 <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="editGroup"
         android:text="@string/button_edit_group" />
   
	 <TextView android:id="@+id/messagesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Messages" />
	 
	 <EditText android:id="@+id/newMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Leave a message" />
	 
	 <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick=""
         android:text="Post" />
	 
	 <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>
	

</LinearLayout>
